--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <div class='header'>
+    <div class='header test'>
         <section id="title">
             <div class="container-fluid">
                 <div class="container px-3">
                     <h1 class="fw-light">Mar Koss</h1>
-                    <h5>Web Design & Development</h5>
+                    <h5 class='pb-5'>Web Design & Development</h5>
                     <!-- <div class="pb-2">
                         <a
                             href="https://www.linkedin.com/in/nicholas-mar-koss/">https://www.linkedin.com/in/nicholas-mar-koss/</a>
@@ -34,7 +36,9 @@
         </section>
     
         <div id="nav-main">
-            
+            <div class='nav-bg'>
+
+            </div>
             <div class="nav-pad">
                 <div class="nav-wide">
                     <div class="row row-cols-sm-5">
@@ -45,7 +49,10 @@
                             <a href="#projects" class="btn btn-dark nav-link"> Projects </a>
                         </div>
                         <div class='col'>
-                            <img class='logo' src='img/mar-koss-logo.png'/>
+                            <div>
+                                <img class='logo-white' src='img/mar-koss-logo-white.png'/>
+                                <img class='logo-black' src='img/mar-koss-logo.png'/>
+                            </div>
                         </div>
                         <div class="col text-center py-2">
                             <a href="#skills" class="btn btn-dark nav-link"> Skills </a>
@@ -87,7 +94,7 @@
 
     <div class="container-fluid experience__section-container">
 
-        <div class="px-5">
+        <div class="blurb px-5">
             <p>I’m a self-motivated software developer, specializing in front-end web and mobile development. I’m inspired by the multiple
                 languages of the mind that coding engages, combining my passion for both
                 structure
@@ -101,168 +108,13 @@
             </p>
         </div>
 
-        <section id="experience">
-
-            <div class="">
-
-                <h2>Experience</h2>
-
-                <div class="experience-card">
-
-                    <div class="experience-head container-fluid">
-                        <div class="position-company">
-                            <p class="company">Lighthouse Labs</p>
-                            <p> - </p>
-                            <p class="position">iOS Mentor</p>
-                        </div>
-                        <p class="location">Vancouver, BC</p>
-                        <p class="period">June 2019 - July 2019</p>
-                    </div>
-
-                    <div class="experience-body container-fluid">
-
-                        <p>
-                            Provided knowledge/experience of iOS development to students with varying skill levels and
-                            knowledge sets.</p>
-                        <p>
-                            Guided students to conclusions by emphasizing self-directed learning.</p>
-                        <p>
-                            Employed attentive listening and clear communication to ensure efficient knowledge transfer.
-                        </p>
-
-                    </div>
-
-                </div>
-
-                <hr>
-
-                <div class="experience-card">
-                    <div class="experience-head container-fluid">
-                        <div class="position-company">
-                            <p class="company">Daanaa Solutions Inc</p>
-                            <p> - </p>
-                            <p class="position">iOS Developer</p>
-                        </div>
-                        <p class="location">Vancouver, BC</p>
-                        <p class="period">April 2019 - May 2019</p>
-                    </div>
-
-                    <div class="experience-body container-fluid">
-                        <p>
-                            Prioritized core specifications to complete the project within a short timeline, resulting
-                            in a
-                            functional demonstrative app.</p>
-                        <p>
-                            Leveraged AWS AppSync to perform data manipulation on DynamoDB and authenticate with Cognito
-                            while minimizing required code.</p>
-                        <p>
-                            Clear and direct communication was key while working with little documentation and a
-                            marginally
-                            available team within a narrow timeframe.</p>
-                    </div>
-                </div>
-
-                <hr>
-
-                <div class="experience-card">
-                    <div class="experience-head container-fluid">
-                        <div class="position-company">
-                            <p class="company">Theorema Systems</p>
-                            <p> - </p>
-                            <p class="position">iOS Developer</p>
-                        </div>
-                        <p class="location">Vancouver, BC</p>
-                        <p class="period">January 2019 - March 2019</p>
-                    </div>
-
-                    <div class="experience-body container-fluid">
-                        <p>
-                            Worked closely with a small team of developers and designers to create and distribute a
-                            transit
-                            aggregator app.</p>
-                        <p>
-                            Leveraged Google Maps API to provide clear and simple route information for mixed
-                            transportation
-                            modes.</p>
-                        <p>
-                            Provided quality assurance through testing on the Jira platform.</p>
-                        <p>
-                            Used project management tools through Jira to effectively multi-task and coordinate with
-                            teammates.</p>
-                        <p>Ensured internal functionality, stability and maintainability through unit testing and
-                            debugging.
-                        </p>
-                        <p>Created modular, readable code by employing the VIP architectural pattern.</p>
-                    </div>
-                </div>
-
-                <hr>
-
-                <div class="experience-card">
-                    <div class="experience-head container-fluid">
-                        <div class="position-company">
-                            <p class="company">Landsure Systems</p>
-                            <p> - </p>
-                            <p class="position">iOS Developer</p>
-                        </div>
-                        <p class="location">Vancouver, BC</p>
-                        <p class="period">September 2018 - December 2018</p>
-                    </div>
-
-                    <div class="experience-body container-fluid">
-                        <p>
-                            Designed and built a functional mobile prototype reflecting the essential services offered
-                            by
-                            the myLTSA web app.</p>
-                        <p>
-                            Implemented Agile development methods; Iterated through several versions of the prototype,
-                            allowing for input from team members.</p>
-                        <p>
-                            Employed initiative and prioritized tasks to ensure the project was completed in 3 months
-                            while
-                            working under minimal supervision.</p>
-                        <p>Aggregated several distinct services by integrating multiple REST APIs, resulting in a more
-                            accurate product</p>
-                    </div>
-                </div>
-
-                <hr>
-
-                <div class="experience-card">
-                    <div class="experience-head container-fluid">
-                        <div class="position-company">
-                            <p class="company">B4T Solutions</p>
-                            <p> - </p>
-                            <p class="position">Mobile Developer</p>
-                        </div>
-                        <p class="location">Ottawa, ON</p>
-                        <p class="period">May 2018 - July 2018</p>
-                    </div>
-
-                    <div class="experience-body container-fluid">
-                        <p>
-                            Built a prototype event ticketing app for iOS and Android.</p>
-                        <p>
-                            Worked with CouchbaseDB to manipulate data ensure consistent syncing across devices online
-                            as
-                            well as for short periods offline.</p>
-                        <p>
-                            Used Jira Services to coordinate task scheduling and improve task-prioritizing between
-                            teammates.</p>
-                    </div>
-                </div>
-
-            </div>
-
-        </section>
-
         <section id="projects">
 
             <div class="container-fluid section-container">
 
                 <h2>Projects</h2>
 
-                <div class="album py-5">
+                <div class="album py-1">
                     <div class="container">
 
                         <div class="row">
@@ -428,6 +280,161 @@
                 </div>
 
             </div>
+        </section>
+
+        <section id="experience">
+
+            <div class="">
+
+                <h2>Experience</h2>
+
+                <div class="experience-card">
+
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">Lighthouse Labs</p>
+                            <p> - </p>
+                            <p class="position">iOS Mentor</p>
+                        </div>
+                        <p class="location">Vancouver, BC</p>
+                        <p class="period">June 2019 - July 2019</p>
+                    </div>
+
+                    <div class="experience-body container-fluid">
+
+                        <p>
+                            Provided knowledge/experience of iOS development to students with varying skill levels and
+                            knowledge sets.</p>
+                        <p>
+                            Guided students to conclusions by emphasizing self-directed learning.</p>
+                        <p>
+                            Employed attentive listening and clear communication to ensure efficient knowledge transfer.
+                        </p>
+
+                    </div>
+
+                </div>
+
+                <hr>
+
+                <div class="experience-card">
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">Daanaa Solutions Inc</p>
+                            <p> - </p>
+                            <p class="position">iOS Developer</p>
+                        </div>
+                        <p class="location">Vancouver, BC</p>
+                        <p class="period">April 2019 - May 2019</p>
+                    </div>
+
+                    <div class="experience-body container-fluid">
+                        <p>
+                            Prioritized core specifications to complete the project within a short timeline, resulting
+                            in a
+                            functional demonstrative app.</p>
+                        <p>
+                            Leveraged AWS AppSync to perform data manipulation on DynamoDB and authenticate with Cognito
+                            while minimizing required code.</p>
+                        <p>
+                            Clear and direct communication was key while working with little documentation and a
+                            marginally
+                            available team within a narrow timeframe.</p>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="experience-card">
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">Theorema Systems</p>
+                            <p> - </p>
+                            <p class="position">iOS Developer</p>
+                        </div>
+                        <p class="location">Vancouver, BC</p>
+                        <p class="period">January 2019 - March 2019</p>
+                    </div>
+
+                    <div class="experience-body container-fluid">
+                        <p>
+                            Worked closely with a small team of developers and designers to create and distribute a
+                            transit
+                            aggregator app.</p>
+                        <p>
+                            Leveraged Google Maps API to provide clear and simple route information for mixed
+                            transportation
+                            modes.</p>
+                        <p>
+                            Provided quality assurance through testing on the Jira platform.</p>
+                        <p>
+                            Used project management tools through Jira to effectively multi-task and coordinate with
+                            teammates.</p>
+                        <p>Ensured internal functionality, stability and maintainability through unit testing and
+                            debugging.
+                        </p>
+                        <p>Created modular, readable code by employing the VIP architectural pattern.</p>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="experience-card">
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">Landsure Systems</p>
+                            <p> - </p>
+                            <p class="position">iOS Developer</p>
+                        </div>
+                        <p class="location">Vancouver, BC</p>
+                        <p class="period">September 2018 - December 2018</p>
+                    </div>
+
+                    <div class="experience-body container-fluid">
+                        <p>
+                            Designed and built a functional mobile prototype reflecting the essential services offered
+                            by
+                            the myLTSA web app.</p>
+                        <p>
+                            Implemented Agile development methods; Iterated through several versions of the prototype,
+                            allowing for input from team members.</p>
+                        <p>
+                            Employed initiative and prioritized tasks to ensure the project was completed in 3 months
+                            while
+                            working under minimal supervision.</p>
+                        <p>Aggregated several distinct services by integrating multiple REST APIs, resulting in a more
+                            accurate product</p>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="experience-card">
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">B4T Solutions</p>
+                            <p> - </p>
+                            <p class="position">Mobile Developer</p>
+                        </div>
+                        <p class="location">Ottawa, ON</p>
+                        <p class="period">May 2018 - July 2018</p>
+                    </div>
+
+                    <div class="experience-body container-fluid">
+                        <p>
+                            Built a prototype event ticketing app for iOS and Android.</p>
+                        <p>
+                            Worked with CouchbaseDB to manipulate data ensure consistent syncing across devices online
+                            as
+                            well as for short periods offline.</p>
+                        <p>
+                            Used Jira Services to coordinate task scheduling and improve task-prioritizing between
+                            teammates.</p>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
 
         <section id="skills">
